--- a/README
+++ b/README
@@ -1,9 +1,10 @@
 drilboor-bejaardencentrum 
 =========================
 
-retirement home
+retirement home 
+huisartsenpraktijk
 dag/nacht 
 woonplezier 
-drilboor 
+betondrilboor 
 
 daalhof
