--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 drilboor-bejaardencentrum 
 =========================
 
-retirement home 
+bejaardentehuis
 huisartsenpraktijk
 dag/nacht 
 woonplezier 
