--- a/README
+++ b/README
@@ -1,11 +1,11 @@
-drilboor-bejaardencentrum 
-=========================
+drilboor-bejaardentehuis
+========================
 
 bejaardentehuis
 huisartsenpraktijk
 dag/nacht 
 woonplezier 
-betondrilboor 
+drilboor 
 met bezieling
 
 daalhof
